# uj-mastering-master

./: .gitignore  CJK_FONTS.md  CLAUDE.md  README.md  analysis_results_manager.py  audio_visualization_widget.py  demo_logging.py  files.txt  font_control_widget.py  font_manager.py  font_selector_widget.py  logger_setup.py  main.py  master_core.py  package-lock.json  plotting_engine.py  pyproject.toml  setup_fonts.py
.claude/: settings.local.json
fonts/: PLACE_YOUR_FONT_FILES_HERE
